# sistema-agendamento-inclusivo

./: .dockerignore  .env.dev  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  api-auth.http  api-auth.http:Zone.Identifier  app.http  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  servers.json
alembic/: env.py
alembic/versions/: 17408b14791c_create_student_role.py  34c019063c13_appointment_token_create_table_for_mail_.py  36e6adf2aea8_appointment_add_confirmed_at_and_.py  44ac4fa6b4d9_create_new_tables.py  4a939b2c3851_reminder_24h_sent_at.py  663f34bb7879_user_change_table_name.py  667634bd82ae_role_enum_add_coordination_professional_.py  a62faf415fa7_init.py  c9f847550338_appointment_create_new_indexes.py  d0d8c7e4379a_appointment_create_table.py  d675ba070ed1_professional_add_user_id_column.py  e528cf061d62_appointment_create_professional_role_.py  e565c48ba857_user_rename_created_at_column.py  ee2014276ce2_partial_unique_index_on_active_slots.py  f4a9a21d8c5e_add_student_role_and_student_user_.py
app/: deps.py  main.py  version.py
app/api/: main.py  test_router.py
app/audit/: helpers.py
app/core/: logging.py  security.py  settings.py
app/db/: __init__.py  base.py  session.py
app/domain/: constants.py
app/email/: render.py
app/jobs/: remind_t24.py
app/middlewares/: telemetry.py
app/models/: __init__.py  appointment.py  appointment_token.py  audit_log.py  availability.py  professional.py  student.py  user.py
app/schemas/: appointments.py  auth.py  availability.py  dashboard_coordination.py  dashboard_family.py  dashboard_professional.py  dashboard_student.py  professionals.py  students.py  user.py  users.py
app/services/: appointment_notify.py  mailer.py  slot_validator.py
app/utils/: time.py  tz.py  week.py
app/web/: flash.py  templating.py
scripts/: clean.py  concurrency_test.py  reminder_cron_boot.sh  seed.py
tests/: conftest.py  test_appointments.py  test_auth.py  test_availability.py  test_dashboard.py  test_professionals.py  test_security.py  test_students.py  test_tz_helpers.py
(+109 files in other folders)
